# mipt-graphics-homework

hw1/camera/: CMakeLists.txt  camera  camera.cpp
hw1/notcube/: CMakeLists.txt  notcube  notcube.cpp
hw1/triangles/: CMakeLists.txt  fragment1.fragmentshader  fragment2.fragmentshader  triangles  triangles.cpp  vertex1.vertexshader  vertex2.vertexshader
